# SyncMouse

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: ClientPosition.h  ClipboardSync.cpp  ClipboardSync.h  Downloads.h  InputCapture.h  InputCaptureMac.h  InputCaptureMac.mm  InputCaptureWin.cpp  InputCaptureWin.h  InputEvent.h  InputInjector.h  InputInjectorMac.h  InputInjectorMac.mm  InputInjectorWin.cpp  InputInjectorWin.h  InputShareController.cpp  InputShareController.h  KeyMap.cpp  KeyMap.h
src/gui/: MainWindow.cpp  MainWindow.h
src/net/: Client.cpp  Client.h  PeerConnection.cpp  PeerConnection.h  Protocol.h  Server.cpp  Server.h
